# promspeed

./: Cargo.toml  Containerfile
.github/workflows/: main.yml
src/: health.rs  main.rs  metrics.rs  speedtest.rs
