[package]
name = "promspeed"
version = "0.1.0"
edition = "2024"

[dependencies]
prometheus = "0.13"
tokio = { version = "1", features = ["full", "rt"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
] }
axum = { version = "0.8" }
lazy_static = "1.5"
